debug/puter/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: puter
  labels:
    app: puter

spec:
  ports:
    - port: 4100
      name: web
      protocol: TCP
      targetPort: web
  selector:
    app: puter
