debug/puter/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: puter-network-policy
spec:
  podSelector:
    matchLabels:
      app: puter
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 4100
          protocol: TCP
  egress:
    # Allow DNS lookups
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    # Deny others
    - {}
